fixes #9 edited css in for donate page to include a few less classes, updated cover image and text, realigned .donateBox content and submit button

--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 body {
     width: auto;
     margin: 0 auto;
-}ddd
+}
 
 #historyBody {
   background-color: #41A6CA;
@@ -198,13 +198,24 @@ input:focus, button:focus {
 
 
 .donateCoverImage {
-  background-image: url(images/ocean-4.jpg);
+  background-image: url(images/reef.jpg);
   background-size: cover;
   width: 100%;
-  height: 500px;
+  height: 600px;
 }
 
-h2 {
+.donateCoverImage p {
+    text-align: left;
+    position: relative;
+    top: 25%;
+    left: 5%;
+    font-size: 44px;
+    margin: 0;
+    color: #fff;
+    width: 800px;
+}
+
+.donateCoverImage h1, .donateCoverImage h2, .donateCoverImage h3, .donateCoverImage h4, .donateCoverImage h5, .donateCoverImage h6 {
     text-align: center;
     position: relative;
     top: 25%;
@@ -213,15 +224,50 @@ h2 {
     color: #fff
 }
 
-#donation {
-    width: 50%;
+.donateCoverImage span {
+  color: #99DC54;
+}
+
+.donationBox {
+    float: left;
+    background-color: lightblue;
+    margin: 40px 20px;
+    border-radius: 10px;
+    width: 52%;
     height: 300px;
+}
+
+.donationBox .formCol1 {
+  margin: 0 15px;
+  padding-left: 50px;
+  float:left;
+}
+.donationBox .formCol2  {
+  margin: 0 15px;
+}
+
+.donationBox .otherAmount #submit {
+    font-size: 24px;
+    margin: 0 10px 10px 0;
+    background-color: #99DC54;
+    float: left;
+    margin: 20px 0 0 60px;
 }
 
 #plea {
     width: 40% ;
     height: 300px;
 }
+
+#pleaText {
+    padding: 10px;
+}
+
+#articleContainer {
+  margin: auto;
+  width: 75%;
+}
+
 .articleBox {
   background-color: #fff;
   width: 70%;
@@ -259,12 +305,6 @@ h2 {
   padding: 0 80px;
 }
 
-div.donationBox {
-    float: left;
-    background-color: lightblue;
-    margin: 20px;
-    border-radius: 10px;
-}
 
 h3 {
     text-align: center;
@@ -286,7 +326,7 @@ h4 {
     float: left;
 }
 
-#moreText {
+.giveContents h5, .giveContents p, .giveContents a {
     width: 500px;
 }
 
@@ -307,22 +347,10 @@ p {
     margin: 0;
 }
 
-#pleaText {
-    padding: 10px;
-}
-div.form {
-    float:left;
-}
 
 label {
     font-size: 24px;
     margin: 0 10px 10px 0;
-}
-
-#submit {
-    font-size: 24px;
-    margin: 0 10px 10px 0;
-    background-color: #99DC54;
 }
 
 #other {
@@ -331,9 +359,6 @@ label {
     margin: 0 10px 10px 0;
 }
 
-form {
-  margin-left: 10px;
-}
 
 footer {
     clear: left;
